# gfalint

./: .gitignore  .travis.yml  LICENSE.md  Makefile.am  README.md  configure.ac  gfal.l  gfalint.cc  gfay.y  test-driver-gfa
examples/: big.gv  big2.gfa  gfalint.test  ir.gv  ir1.gfa  ir2.gfa  sample.gv  sample1.gfa  sample2.gfa
