AC_PREREQ([2.69])
AC_INIT([gfalint], [0.1.0], [sjackman@gmail.com], [gfalint],
	[https://github.com/sjackman/gfalint])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LEX
AC_PROG_YACC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
