AC_PREREQ([2.68])
AC_INIT([gfalint], [1.0.0], [sjackman@gmail.com], [gfalint],
	[https://github.com/sjackman/gfalint])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign parallel-tests])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LEX
AC_PROG_YACC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
